fix: accept markdown text utis

--- a/MarkdownRenderer/Info.plist
+++ b/MarkdownRenderer/Info.plist
@@ -35,6 +35,8 @@
 			<key>LSItemContentTypes</key>
 			<array>
 				<string>public.markdown</string>
+				<string>net.daringfireball.markdown</string>
+				<string>public.plain-text</string>
 			</array>
 			<key>CFBundleTypeExtensions</key>
 			<array>
@@ -42,6 +44,25 @@
 			</array>
 		</dict>
 	</array>
+	<key>UTImportedTypeDeclarations</key>
+	<array>
+		<dict>
+			<key>UTTypeIdentifier</key>
+			<string>public.markdown</string>
+			<key>UTTypeDescription</key>
+			<string>Markdown</string>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.text</string>
+			</array>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<array>
+					<string>md</string>
+				</array>
+			</dict>
+		</dict>
+	</array>
 </dict>
 </plist>
-
